--- a/.github/workflows/template_sync.yaml
+++ b/.github/workflows/template_sync.yaml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      repository-projects: read
 
     steps:
       - name: Checkout
@@ -20,3 +21,9 @@ jobs:
         with:
           source_repo_path: ardubev16/py-tgbot-template
           upstream_branch: master
+          is_force_push_pr: true
+          is_pr_cleanup: true
+          git_user_name: actions-template-sync
+          git_user_email: 43483037+ardubev16@users.noreply.github.com
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
