--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,23 @@
 [project]
-name = "bot-name"
+name = "py-tgbot-template"
 version = "0.1.0"
+description = "Add your description here"
 readme = "README.md"
+authors = [
+    { name = "Lorenzo Bevilacqua", email = "43483037+ardubev16@users.noreply.github.com" },
+]
 requires-python = ">=3.12"
-dependencies = ["python-telegram-bot==21.9"]
+dependencies = []
+
+[project.scripts]
+py-tgbot-template = "py_tgbot_template:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pyright]
 pythonVersion = "3.12"
 typeCheckingMode = "strict"
 reportUnknownMemberType = false
 reportUnknownVariableType = false
-
-[tool.ruff]
-target-version = "py312"
-line-length = 120
-
-[tool.ruff.lint]
-select = ["ALL"]
-ignore = [
-    "ANN204", # Missing type annotation for special method
-    "D1",     # Missing docstring in public: module, class, method, function, package, magic method, nested class, init
-    "D203",   # 1 blank line required before class docstring
-    "D212",   # Multi-line docstring summary should start at the first line
-    "DTZ",    # No Naive Datetime
-    "EM101",  # Exception must not use a string literal
-    "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
-    "TRY003", # Avoid specifying long messages outside the exception class
-    "TRY400", # Use logging.exception() instead of logging.error() for logging exceptions
-]
