refactor: move back ruff rules in pyproject

--- a/.github/sync.yaml
+++ b/.github/sync.yaml
@@ -8,6 +8,6 @@ group:
       - .editorconfig
       - .gitignore
       - .pre-commit-config.yaml
-      - .ruff.toml
       - LICENSE
+      - pyproject.toml
       - renovate.json
