refactor: split ruff config from main pyproject.toml

--- a/.github/sync.yaml
+++ b/.github/sync.yaml
@@ -4,10 +4,11 @@ group:
       ardubev16/lmbatbot
       ardubev16/punbot
     files:
+      - sync-config
       - .dockerignore
       - .editorconfig
       - .gitignore
       - .pre-commit-config.yaml
+      - .python-version
       - LICENSE
-      - pyproject.toml
       - renovate.json
