--- a/sync-config/pyproject.toml
+++ b/sync-config/pyproject.toml
@@ -10,6 +10,8 @@ ignore = [
     "D203",   # 1 blank line required before class docstring
     "D212",   # Multi-line docstring summary should start at the first line
     "DTZ",    # No Naive Datetime
+    "FIX",    # Line contains FIXME, TODO, XXX, HACK, consider resolving the issue
     "S311",   # Standard pseudo-random generators are not suitable for cryptographic purposes
+    "TD002",  # Checks that a TODO comment includes an author.
     "TRY400", # Use logging.exception() instead of logging.error() for logging exceptions
 ]
